--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
                             좌표간 거리 계산
                         </button>
                     </div>
+
+                    <div class="mt-6 pt-6 border-t border-gray-200">
+                        <h3 class="text-sm font-medium mb-2">사용 가이드</h3>
+                        <ol class="text-sm text-gray-600 list-decimal pl-4 space-y-1">
+                            <li>좌표값은 대충 입력해도 포맷에 맞게 들어감</li>
+                            <li>마우스 클릭으로 지도에 직접 그리기 가능</li>
+                        </ol>
+                    </div>
                 </div>
             </div>
         </div>
