타이틀 변경

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8">
-    <title>좌표간 거리계산</title>
+    <title>거리계산기</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=58155b619ba1503ba84ea1937f578d74&libraries=services"></script>
@@ -14,7 +14,7 @@
 <body>
 <div class="container mx-auto p-4 max-w-6xl flex items-center justify-center min-h-screen">
     <div class="flex flex-col w-full mb-10">
-        <h1 class="text-2xl font-bold mb-6">좌표간 거리계산기</h1>
+        <h1 class="text-2xl font-bold mb-6">거리계산기</h1>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
             <div class="lg:col-span-2 h-[500px] md:h-[600px] bg-white rounded-lg shadow-md overflow-hidden">
                 <div class="h-full relative bg-slate-100 rounded-lg overflow-hidden">
@@ -95,7 +95,7 @@
                         <ol class="text-sm text-gray-600 list-decimal pl-4 space-y-1">
                             <li>좌표값은 숫자 2개 추출되면 포맷에 맞게 들어갑니다.</li>
                             <li>마우스 클릭으로 지도에 직접 그리기 가능합니다.</li>
-                            <li>장소검색 성공시 좌표가 클립보드로 복사됩니다</li>
+                            <li>장소검색 성공시 좌표가 클립보드로 복사됩니다.</li>
                         </ol>
                     </div>
                 </div>
