--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                         </div>
                     </div>
 
-                    <div class="mt-6 pt-6 border-t border-gray-200">
-                        <h3 class="text-sm font-medium mb-2">사용 가이드</h3>
-                        <ol class="text-sm text-gray-600 list-decimal pl-4 space-y-1">
-                            <li>좌표값은 숫자 2개 추출되면 포맷에 맞게 들어갑니다.</li>
-                            <li>마우스 클릭으로 지도에 직접 그리기 가능합니다.</li>
-                            <li>장소검색 성공시 좌표가 클립보드로 복사됩니다.</li>
-                        </ol>
-                    </div>
+<!--                    <div class="mt-6 pt-6 border-t border-gray-200">-->
+<!--                        <h3 class="text-sm font-medium mb-2">사용 가이드</h3>-->
+<!--                        <ol class="text-sm text-gray-600 list-decimal pl-4 space-y-1">-->
+<!--                            <li>좌표값은 숫자 2개 추출되면 포맷에 맞게 들어갑니다.</li>-->
+<!--                            <li>마우스 클릭으로 지도에 직접 그리기 가능합니다.</li>-->
+<!--                            <li>장소검색 성공시 좌표가 클립보드로 복사됩니다.</li>-->
+<!--                        </ol>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
