--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-white rounded-lg shadow-md">
+            <div class="bg-white rounded-lg">
                 <div class="p-6">
                     <h2 class="text-xl font-semibold mb-4">좌표 입력</h2>
                     <div class="space-y-5">
@@ -62,7 +62,7 @@
                         </button>
                     </div>
 
-                    <div class="mt-6 pt-6 border-t border-gray-200 bg-white shadow-md w-full">
+                    <div class="mt-6 pt-6 border-t border-gray-200 bg-white w-full">
                         <h2 class="text-xl font-semibold mb-4">장소 검색</h2>
                         <div class="space-y-4">
                             <div class="space-y-2">
